--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     },
     "dependencies": {
         "@tailwindcss/vite": "^4.0.3",
+        "feather-icons": "^4.29.2",
         "flowbite": "^3.1.2",
         "tw-elements": "^2.0.0"
     }
